--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.21",
     "axios": "^0.24.0",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
